--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
 #  file_picker: ^5.5.0
   cloudinary: ^1.2.0
   permission_handler: ^11.1.0
+  image_picker: ^1.1.2
 #  fluttertoast: ^8.0.9
 #  path_provider: ^2.1.1
 
